# paelladoc-plugin-sdk

./: LICENSE  README.md  pyproject.toml
examples/aider-adapter/: plugin.json
examples/aider-adapter/engines/: aider.json
examples/aider-adapter/skills/: review-with-aider.md
examples/django-pack/: plugin.json
examples/django-pack/skills/: django-review.md
examples/django-pack/templates/: model-change.md
examples/django-pack/validators/: quality-gates.json
examples/fastapi-pack/: plugin.json
examples/fastapi-pack/skills/: fastapi-review.md
examples/fastapi-pack/templates/: api-change.md
examples/fastapi-pack/validators/: quality-gates.json
examples/github-mcp-pack/: plugin.json
examples/github-mcp-pack/mcp/: github.json
examples/github-mcp-pack/skills/: pr-review.md
examples/jtbd-method-pack/: plugin.json
examples/jtbd-method-pack/methods/: jtbd.json
examples/jtbd-method-pack/skills/: jtbd-framing.md
examples/jtbd-method-pack/templates/: forces.md  job-area.md  job-story.md  outcome-map.md
examples/nextjs-pack/: plugin.json
examples/nextjs-pack/skills/: nextjs-review.md
examples/nextjs-pack/templates/: prd-nextjs-saas.md
examples/nextjs-pack/validators/: quality-gates.json
examples/product-method-pack/: plugin.json
examples/rails-pack/: plugin.json
examples/rfc-adr-method-pack/: plugin.json
examples/shape-up-method-pack/: plugin.json
examples/tauri-macos-pack/: plugin.json
schemas/: plugin-manifest-v1.schema.json
src/paelladoc_plugin_sdk/: __init__.py  cli.py  manifest.py
tests/: test_manifest.py
(+24 files in other folders)
